{{$NEXT}}

 * Feature tracks no longer use the `style.subfeatureScale`
   configuration variable to determine whether to show subfeatures.
   Instead, subfeatures are shown if the parent feature, when shown on
   the screen, is wider than `style.minSubfeatureWidth`, which
   defaults to 6 pixels.

 * Greatly sped up rendering of HTML subfeatures by caching the
   heights of subfeature HTML elements.

 * Added a vertical line cursor and labels showing the current
   basepair position of the mouse when hovering over the scale bar, or
   when doing a rubber-band zoom (Erik Derohanian) (issue #32).

 * Added support for exporting track data in FASTA, GFF3, bed,
   bedGraph, and Wiggle formats (issue #104).

 * Added an animation to make it easier to see where in the track
   selection list a closed track has gone, when using the simple track
   selector (issue #151).

 * Information dialog boxes are now easier to dismiss: clicking
   anywhere outside of them, or pressing any key, will make them go
   away.

1.6.6  FIXME ADD THE DATE HERE

 * Fix bug with the genome view scrolling in response to arrow keys
   being pressed when typing in the location box.

1.6.5     2012-10-26 12:10:08 America/New_York

 * The location box now shows the length of the currently visible
   region in parentheses.  For example: `ctgB:1244..3566 (2.32 Kb)`.
   Thanks to Karsten Hokamp for the suggestion!

 * The arrow keys on the keyboard can now be used to pan and scroll
   around the genome view.

 * Wiggle track mouseover cursors now display the score with only 6
   significant digits, avoiding confusion over approximations
   introduced by scores being converted to IEEE floating-point numbers
   (as for BigWig files) and back to text.

 * The faceted track selector now renders any HTML that may be present
   in the track metadata by default.  To turn this off, it now accepts
   an `escapeHTMLInData` option that, if set to `true` or `1`, will